2008-09-23  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (REGEXP-EXEC): when :BOOLEAN is T but
	match failed, return 1 value NIL instead of 0 values;
	accept :RETURN-TYPE to return a LIST or a VECTOR instead of
	multiple values; also return a list when the number of match
	groups is more than MULTIPLE-VALUES-LIMIT

2008-09-23  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): fix the Host: header
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-09-19  Sam Steingold  <sds@gnu.org>

	* modules/i18n/gettext.c (SET-TEXTDOMAINDIR): remove unused variable
	* modules/syscalls/calls.c (STREAM-OPTIONS): ditto
	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): ditto
	* genclisph.d (Lsuffix): remove unused global static
	(ULLsuffix): declare only when used
	(emit_typedef_test): use "%ld" for sizeof
	* spvw_debug.d (nobject_out1, bt_out): cast pointers to (uintP)
	before printing, print long ints as "%ld"
	* stream.d (xrealloc): remove unused function
	(TERMINAL-RAW, read_line, READ-INTEGER, READ-FLOAT)
	(WRITE-INTEGER): remove unused variable

2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (my_check_argument): remove (not used
	since DEFCHECKERs were introduced in 1.10 on 2004-05-14)

2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/dbi.lisp (close@db): pass :ABORT as :NOSYNC

2008-09-18  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (on_pnamestring): generalize ...
	(stat_obj): remove
	(path_truncate): do not do begin/end_system_call and error
	reporting, return status instead
	(%SET-FILE-SIZE, FILE-SIZE, FILE-STAT, find_first_file)
	(SET-FILE-STAT, STAT-VFS, FILE-OWNER, copy_attributes_and_close):
	use on_pnamestring

2008-09-18  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): "user-agent" includes version;
	link to http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html

2008-09-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:FILE-SIZE) [WIN32_NATIVE]: